# imx415_streamer

./: Cargo.toml  power_save.sh  yolo_detector.py
src/: capture.rs  detector.rs  main.rs
